# frc-shooter-selector

./: LICENSE  README.md  index.html  manage.py  pyproject.toml  requirements.txt  shooter_tuning_tool.py  shooter_with_drag.py
shooter/: physics.py  urls.py  views.py
shooter_web/: asgi.py  settings.py  urls.py  wsgi.py
templates/shooter/: index.html
